# alt-maint-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.gear/: alt-maint-tools.spec  rules
.github/workflows/: python-app.yml  python-package.yml
src/alt_maint_tools/: __init__.py  alt_vs_pypi.py  branch_compare.py  vendor_export.py
tests/: test_alt_vs_pypi.py  test_branch_compare.py  test_vendor_export.py
