[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alt-maint-tools"
version = "0.1.0"
description = "Utilities for ALT Linux package maintainers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Pavel Shilov", email = "zerospirit@altlinux.org" },
]
keywords = ["altlinux", "packaging", "maintainer", "pypi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage = "https://github.com/zerospirit79/alt-maint-tools"
Repository = "https://github.com/zerospirit79/alt-maint-tools"
Issues = "https://github.com/zerospirit79/alt-maint-tools/issues"

[project.scripts]
alt-vs-pypi = "alt_maint_tools.alt_vs_pypi:main"
alt-branch-compare = "alt_maint_tools.branch_compare:main"
alt-vendor-export = "alt_maint_tools.vendor_export:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
